Game collections extracters