@@ -5,9 +5,11 @@ import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestClient;
+import org.springframework.web.client.RestClientException;
 
 import com.bipsqwake.compromise_ws.exception.InvalidInputException;
 import com.bipsqwake.compromise_ws.room.Card;
@@ -17,53 +19,39 @@ import lombok.extern.slf4j.Slf4j;
 @Service
 @Slf4j
 public class TeseraService {
-    private static final int BATCH_SIZE = 100;
 
-    private final RestClient restClient;
-
-    public TeseraService(RestClient.Builder restClientBuilder) {
-
-        this.restClient = restClientBuilder
-                .baseUrl("https://api.tesera.ru/v1/")
-                .build();
-    }
+    @Autowired
+    TeseraExtractor teseraExtractor;
 
     public List<Card> getCardsFromCollection(String username, int playersNum) throws InvalidInputException {
-        List<TeseraGame> bgList = getTeseraGames(username, playersNum);
-        return teseraListToCardList(bgList);
-    }
-
-    private List<TeseraGame> getTeseraGames(String username, int playersNum) {
         List<TeseraGame> result = new LinkedList<>();
-        int offset = 0;
-        while (true) {
-            List<TeseraGame> tmp = restClient
-                    .get()
-                    .uri("/collections/base/own/" + username + "?GamesType=SelfGame&Limit=" + BATCH_SIZE + "&Offset=" + offset)
-                    .retrieve()
-                    .body(new ParameterizedTypeReference<List<TeseraGameCard>>() {
-                    }).stream()
-                    .map(card -> card.getGame()).collect(Collectors.toList());
-            if (tmp.isEmpty()) {
-                break;
-            } else {
-                result.addAll(tmp);
-                offset += BATCH_SIZE;
-            }
+        List<TeseraGameCard> tmp;
+        int page = 0;
+        try {
+            do {
+                tmp = teseraExtractor.extractGames(username, page++);
+                result.addAll(tmp.stream().map(TeseraGameCard::getGame).toList());
+            } while (!tmp.isEmpty());
+        } catch (RestClientException e) {
+            throw new InvalidInputException("Failed to extract Tesera list");
         }
-        return result;
+        return teseraListToCardList(result.stream()
+                .map(game -> teseraExtractor.getFullCard(game).getGame())
+                .toList(), playersNum);
     }
 
-    private static List<Card> teseraListToCardList(List<TeseraGame> list) {
-        return list.stream().map(TeseraService::teseraGameToCard).collect(Collectors.toList());
+    private static List<Card> teseraListToCardList(List<TeseraGame> list, int playersNum) {
+        return list.stream()
+                .filter(game -> game.isSuitableForPlayersNum(playersNum))
+                .map(TeseraService::teseraGameToCard)
+                .collect(Collectors.toList());
     }
 
     private static Card teseraGameToCard(TeseraGame game) {
         return new Card(
-            UUID.randomUUID().toString(),
-            game.getTitle(),
-            game.getDescriptionShort(),
-            game.getPhotoUrl()
-        );
+                UUID.randomUUID().toString(),
+                game.getTitle(),
+                game.getDescriptionShort(),
+                game.getPhotoUrl());
     }
 }
